api/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3100
  selector:
    app: todo-api
